--- a/sass_scss/4-nested_class.scss
+++ b/sass_scss/4-nested_class.scss
@@ -1,8 +1,8 @@
-$text-color: #3d3d3d;
-$text-color-red: #ff0000;
+/* Nested class declarations */
+
 body {
-  color: $text-color;
-  body .red {
-    color: $text-color-red;
+  color: #3D3D3D;
+  .red {
+    color: #FF0000; 
   }
 }
